--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
+    "luss": "^3.0.5",
     "vue": "^3.2.37"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
+    "pug": "^3.0.2",
     "typescript": "^4.6.4",
     "unocss": "^0.45.13",
     "vite": "^3.0.7",
