--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@unocss/extractor-pug": "^0.45.13",
     "@vitejs/plugin-vue": "^3.0.3",
     "pug": "^3.0.2",
     "typescript": "^4.6.4",
