--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/node": "^18.7.14",
     "@unocss/extractor-pug": "^0.45.13",
     "@vitejs/plugin-vue": "^3.0.3",
+    "less": "^4.1.3",
     "pug": "^3.0.2",
     "typescript": "^4.6.4",
     "unocss": "^0.45.13",
