--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "luss": "^3.0.5",
-    "vue": "^3.2.37"
+      "luss": "^3.0.5",
+      "vue": "^3.2.37"
   },
   "devDependencies": {
     "@types/node": "^18.7.14",
+    "@unocss/core": "^0.45.14",
     "@unocss/extractor-pug": "^0.45.13",
     "@vitejs/plugin-vue": "^3.0.3",
     "less": "^4.1.3",
