--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
-      "luss": "^3.0.5",
-      "vue": "^3.2.37"
+    "luss": "^3.0.5",
+    "vue": "^2.7.10"
   },
   "devDependencies": {
     "@types/node": "^18.7.14",
     "@unocss/core": "^0.45.14",
     "@unocss/extractor-pug": "^0.45.13",
-    "@vitejs/plugin-vue": "^3.0.3",
+    "@vitejs/plugin-vue2": "^1.1.2",
     "less": "^4.1.3",
     "pug": "^3.0.2",
     "typescript": "^4.6.4",
